# lol_dht22

./: Makefile  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.in  dht22.c  locking.c  locking.h
