AC_INIT(lolware_dht, version-0.1)
AM_INIT_AUTOMAKE(lolware_dht,0.0.1)
AM_CONFIG_HEADER(config.h)
AM_SILENT_RULES([yes])


AC_LANG_C
AC_PROG_CC
AC_PROG_MAKE_SET

AC_ARG_ENABLE(development, [ --enable-development enable developer features [default=no]],
       [CFLAGS="-Wall -O0 -g" ])

AC_ARG_ENABLE(secure, [ --enable-secure turn on security features [default=yes]])
	
AS_IF([test "x$enable_secure" != "xno"], [
	if test "x$enable_development" = "xyes" ; then
	AC_MSG_WARN("Developer on: Turning off secure")
	else
	CFLAGS="-Wall -fstack-protector -D_FORTIFY_SOURCE=2 -O2"
	fi
])



AC_HEADER_STDC
AC_CHECK_HEADER(wiringPi,wiringpi_h_found=yes)
AS_IF([test x$wiringpi_h_found != "xyes"],
	AC_CHECK_HEADER([/usr/local/include/wiringPi.h],
		CFLAGS="${CFLAGS} -I/usr/local/include",
		AC_MSG_ERROR(Fail to find wiringPi.h)
	)
)

AC_CHECK_LIB(wiringPi, wiringPiSetup,,AC_MSG_ERROR(Fail to find wiringPi library))

AC_OUTPUT(Makefile)


